# yetty-plugins

./: CMakeLists.txt  Makefile
.github/workflows/: cmake-multi-platform.yml
build-tools/cmake/python/: CMakeLists.txt
src/tester/: main.cpp
src/yetty/plugins/: CMakeLists.txt
src/yetty/plugins/pdf/: pdf.cpp  pdf.h
src/yetty/plugins/python/: README.md  python.cpp  python.h  yetty_pygfx.py  yetty_wgpu.cpp  yetty_wgpu.h
src/yetty/plugins/shader-glyph/shaders/: mapping.yaml
src/yetty/plugins/video/: video.cpp  video.h
src/yetty/plugins/ymery/: ymery.cpp  ymery.h
